update company
