# app/company/handler.go
@@ -1,0 +1,67 @@
+package company
+
+import (
+	"github.com/jihanlugas/sistem-percetakan/jwt"
+	"github.com/jihanlugas/sistem-percetakan/request"
+	"github.com/jihanlugas/sistem-percetakan/response"
+	"github.com/jihanlugas/sistem-percetakan/utils"
+	"github.com/labstack/echo/v4"
+	"net/http"
+)
+
+type Handler struct {
+	usecase Usecase
+}
+
+func NewHandler(usecase Usecase) Handler {
+	return Handler{
+		usecase: usecase,
+	}
+}
+
+// Update
+// @Tags Company
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param id path string true "ID"
+// @Param req body request.UpdateCompany true "json req body"
+// @Success      200  {object}	response.Response
+// @Failure      500  {object}  response.Response
+// @Router /company/{id} [put]
+func (h Handler) Update(c echo.Context) error {
+	var err error
+
+	loginUser, err := jwt.GetUserLoginInfo(c)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
+	}
+
+	id := c.Param("id")
+	if id == "" {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetParam, err, nil).SendJSON(c)
+	}
+
+	req := new(request.UpdateCompany)
+	if err = c.Bind(req); err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerBind, err, nil).SendJSON(c)
+	}
+
+	utils.TrimWhitespace(req)
+
+	err = c.Validate(req)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerFailedValidation, err, response.ValidationError(err)).SendJSON(c)
+	}
+
+	if jwt.IsSaveCompanyIDOR(loginUser, id) {
+		return response.Error(http.StatusBadRequest, response.ErrorHandlerIDOR, err, nil).SendJSON(c)
+	}
+
+	err = h.usecase.Update(loginUser, id, *req)
+	if err != nil {
+		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
+	}
+
+	return response.Success(http.StatusOK, response.SuccessHandler, nil).SendJSON(c)
+}
