# docs/swagger.yaml
@@ -250,6 +250,26 @@ definitions:
     - passwd
     - username
     type: object
+  request.UpdateCompany:
+    properties:
+      address:
+        type: string
+      description:
+        type: string
+      email:
+        type: string
+      invoiceNote:
+        type: string
+      name:
+        type: string
+      phoneNumber:
+        type: string
+    required:
+    - address
+    - email
+    - name
+    - phoneNumber
+    type: object
   request.UpdateCustomer:
     properties:
       address:
@@ -464,6 +484,37 @@ paths:
             $ref: '#/definitions/response.Response'
       tags:
       - Authentication
+  /company/{id}:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: json req body
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateCompany'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - BearerAuth: []
+      tags:
+      - Company
   /customer:
     get:
       consumes:
